# Model-Optimizer

./: .envrc  flake.nix  pyproject.toml
examples/diffusers/: flake.nix  pyproject.toml
examples/diffusers/quantization/: config.py  diffusion_trt.py  fast_fail_shapes.py  layers.json  modelopt_auto_shapes.py  modelopt_shape_database.json  modelopt_test_factory.py  print-tiny-onnx-0x02.py  print-tiny-onnx-0x03.py  print-tiny-onnx-0x04.py  print-tiny-onnx-0x05.py  print-tiny-onnx-0x08.py  print-tiny-onnx-0x09.py  print-tiny-onnx-0x0a.py  print-tiny-onnx.py  quantize.py  test_shape_validation.py  utils.py
examples/diffusers/quantization/.claude/: settings.local.json
examples/diffusers/quantization/my_configs/: flux.2-dev_config.py  flux.2-dev_shapes.json
examples/diffusers/quantization/onnx_utils/: export.py
examples/diffusers/quantization/test_output/: flux.1-schnell_config.py  z-image-turbo_config.py
examples/diffusers/quantization/test_output_clean/: flux.1-schnell_config.py  flux.1-schnell_shapes.json  z-image-turbo_config.py  z-image-turbo_shapes.json
modelopt/onnx/export/: nvfp4_exporter.py  nvfp4_exporter_full.py
