[project]
name = "impure-package"
version = "0.1.0"
description = "Add your description here"
authors = [ ]
requires-python = ">=3.12"
dependencies = [
    "nvidia-modelopt[all]",
    "onnx>=1.19.1",
    "onnx-graphsurgeon>=0.5.8",
    "onnxruntime-gpu>=1.22.0",
    "onnxscript>=0.5.6",
    "onnxsim>=0.4.36",
    "onnxslim>=0.1.78",
    "sentencepiece>=0.2.1",
    "torch==2.9.1",
    "torch-tensorrt>=2.9.0",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/cu130"

[tool.uv.sources]
nvidia-modelopt = { path = "../../", editable = true }
